Updating references of alexlaird.name to alexlaird.com.

--- a/App/src/adl/go/resource/languages/bundle_en.properties
+++ b/App/src/adl/go/resource/languages/bundle_en.properties
@@ -1,8 +1,8 @@
 #
 # Get Organized - Organize your schedule, course assignments, and grades
 # Copyright (c) 2012 Alex Laird
-# getorganized@alexlaird.name
-# alexlaird.name
+# getorganized@alexlaird.com
+# alexlaird.com
 #
 # This program is free software: you can redistribute it and/or modify
 # it under the terms of the GNU General Public License as published by
@@ -211,9 +211,9 @@ removeEventText=Are you sure you want to remove the selected event?
 dontAskMeAgain=Don't ask me this again
 removeRepeatingEventText=You are removing an event from a series of events. Would you like other events in this\nseries to be removed, or only this instance?
 removeAssignmentText=Are you sure you want to remove the selected assignment?
-helpContentOnlineText=Help content is online, and the default browser could not be launched.\nTo view help content, please visit alexlaird.name/projects/get-organized/support.
+helpContentOnlineText=Help content is online, and the default browser could not be launched.\nTo view help content, please visit alexlaird.com/projects/get-organized/support.
 editRepeatingEventText=Changing this events date will separate it from the repeating series.\nWould you like to separate this event into its own instance?
-donateOnlineText=You may donate to Get Organized online at alexlaird.name/projects/get-organized/donate.
+donateOnlineText=You may donate to Get Organized online at alexlaird.com/projects/get-organized/donate.
 
 localVersion=Your Version
 serverVersion=Latest Version
@@ -555,7 +555,7 @@ advisorOfficeLocationToolTip=The office location of your advisor
 # About Dialog
 #####################
 version=Version
-license=Get Organized is software from alexlaird.name and is licensed under the GNU General Public License version 3. Copyright \u00a9 2010-2012 Alex Laird. For more information, visit our website.
+license=Get Organized is software from alexlaird.com and is licensed under the GNU General Public License version 3. Copyright \u00a9 2010-2012 Alex Laird. For more information, visit our website.
 specialThanks=<div align="center"><b><em>Special thanks to:</em></b></div><br /><b>Joey</b> - For the original idea<br /><b>Andrew</b> - For your continual motivation to not settle for less<br /><b>Jess</b> - For the countless hours you let me work on this program instead of spending time with you, and for being my most faithful tester ... And for agreeing to spend the rest of your life with me!<br /><b>Gabe</b> - For designing the logo and icons<br /><b>Dr. Gallagher</b> - For teaching me to strive for something beyond perfection, because it was the only way to earn good grades in your classes ... And for the countless hours I spent developing this in your classes
 
 #####################
